--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "1.0.0",
     "description": "Desi Premium Entertainment App",
     "scripts": {
-        "start": "cd server && npm start",
-        "build": "cd client && npm install && npm run build && cd ../server && npm install",
+        "start": "npm start --prefix server",
+        "build": "npm install --prefix client && npm run build --prefix client && npm install --prefix server",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "server": "cd server && npm run dev",
-        "client": "cd client && npm run dev"
+        "server": "npm run dev --prefix server",
+        "client": "npm run dev --prefix client"
     },
     "dependencies": {
         "concurrently": "^8.0.1"
