--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Desi Premium Entertainment App",
     "scripts": {
         "start": "npm start --prefix server",
-        "build": "npm install --prefix client && npm run build --prefix client && npm install --prefix server",
+        "build": "npm install --prefix client --include=dev && npm run build --prefix client && npm install --prefix server",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "server": "npm run dev --prefix server",
         "client": "npm run dev --prefix client"
