--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: desi-premium-1
     env: node
-    buildCommand: npm install && npm run build
+    plan: free
+    buildCommand: npm install && npm install --prefix client && npm run build --prefix client && npm install --prefix server
     startCommand: npm start
     envVars:
       - key: NODE_ENV
